Fixed navigation position and z-index.

--- a/css/navigation.less
+++ b/css/navigation.less
@@ -117,6 +117,7 @@ sections {
                     &.expanded {
                         .dropdown { 
                             opacity: 1;
+                            top: initial;
                             display: block;
                         }
                     }
@@ -125,7 +126,7 @@ sections {
                         .transition(opacity .3s ease-in);
                         width: 100%;
                         position: absolute;
-                        background-color: @BLUE;
+                        top: -1000px;
                         margin-top: @triangle_size;
                         .triangle {
                             .triangle(@triangle_size);
@@ -133,14 +134,18 @@ sections {
                             color: @ORANGE;
                         }
                         .menu {
-                            background-color: fade(@DARK_GREY, 70%);
+                            background-color: @BLUE;
                             border: solid 1px @ORANGE;
                             .border-radius(4px);
-                            div.table {
-                                height: initial;
-                                a {
-                                    width: 100%;
-                                    padding: 0 5px;
+                            .menu-wrap {
+                                background-color: fade(@DARK_GREY, 70%);
+                                .border-radius(4px);
+                                div.table {
+                                    height: initial;
+                                    a {
+                                        width: 100%;
+                                        padding: 0 5px;
+                                    }
                                 }
                             }
                         }
